feat: support typed SerDes pipeline stages